<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/medhacks_image">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ddffffff">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Profile"
            android:textAllCaps="true"
            android:textColor="#3F51B5"
            android:textSize="30sp"
            android:textStyle="bold"
            app:fontFamily="serif"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/Patient_First_Name"
                    android:inputType="text"
                    android:textSize="18dp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="0dp" />

                <EditText
                    android:id="@+id/Last_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/Patient_Last_Name"
                    android:inputType="text"
                    android:textSize="18dp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="0dp" />
            </LinearLayout>


            <EditText
                android:id="@+id/DateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/DateOfBirth"
                android:inputType="text"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp" />

            <EditText
                android:id="@+id/Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/Patient_Address"
                android:inputType="text"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp" />
            <EditText
                android:id="@+id/Postal_Code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/Patient_Postal_Code"
                android:inputType="text"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp" />
        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Patient_Condition"
            android:textAllCaps="true"
            android:textColor="#3F51B5"
            android:textSize="30sp"
            android:textStyle="bold"
            app:fontFamily="serif"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/textView2"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Breathing_Difficulty"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.231"
            tools:layout_editor_absoluteX="0dp" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/view_below"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/zero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0" />

            <RadioButton
                android:id="@+id/one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1" />

            <RadioButton
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2" />
            <RadioButton
                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="3" />
            <RadioButton
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="4" />
            <RadioButton
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="5" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView3"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Consciousnes"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/radio_group"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.231"
            tools:layout_editor_absoluteX="0dp" />

        <RadioGroup
            android:id="@+id/radio_group2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/view_below"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/Yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Yes" />

        <RadioButton
            android:id="@+id/No"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="No" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView4"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Pain"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.231"
            tools:layout_editor_absoluteX="0dp" />

        <RadioGroup
            android:id="@+id/pain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/view_below"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/pzero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0" />

            <RadioButton
                android:id="@+id/pone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1" />

            <RadioButton
                android:id="@+id/ptwo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2" />
            <RadioButton
                android:id="@+id/pthree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="3" />
            <RadioButton
                android:id="@+id/pfour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="4" />
            <RadioButton
                android:id="@+id/pfive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="5" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView5"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Bleeding"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.231"
            tools:layout_editor_absoluteX="0dp" />

        <RadioGroup
            android:id="@+id/Bleed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/view_below"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/bzero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no_bleeding" />

            <RadioButton
                android:id="@+id/bone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/little_bleeding" />

            <RadioButton
                android:id="@+id/btwo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mild_bleeding" />
            <RadioButton
                android:id="@+id/bthree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/important_bleeding" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView6"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Additional_info"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.231"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/additional_info"
            android:layout_marginTop="10dp"
            android:inputType="text"
            />

    </LinearLayout>
        <Button
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  Submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.498"
            android:drawableLeft="@drawable/tick"
            android:layout_gravity="center_vertical|center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Bleed"
            app:layout_constraintVertical_bias="0.776"
            tools:ignore="MissingConstraints" />
    </LinearLayout>
</ScrollView>